@@ -34,6 +34,11 @@
 			description="Enable check of host certificates"
 			value="true"/>
 
+		<rgma.servicetool.activate
+			description="Turn on/off servicetool for the node.
+				[Example: true ] [Type: 'boolean']"
+			value="true"/>			
+
 		<!-- mysql configuration -->
 		<set.mysql.root.password
 			description="If this parameter is true, then the root password of the mysql database
@@ -41,6 +46,12 @@
 			no effect if the database root password is already set. It can be used to ease automated
 			installation and configuration of the service, if mysql is not managed in some other way"
 			value="false"/>
+
+		<mysql.max_allowed_packet
+			description="This parameter allows to set the max_allowed_packet parameter in the mysql
+			configuration file /etc/my.cnf. The default recommended value for the LB server is 17MB
+			[Example: 17][Type: Integer][Unit: MB]"
+			value="17"/>
 
 		<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 		<!-- System parameters - You should leave these alone -->
